// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormGroup when is invalid renders without crashing 1`] = `
<div
  class="sc-AxjAm gwJtGB"
>
  <label
    class="sc-AxirZ bgWkfA"
    for="password"
  >
    Password
  </label>
  <input
    class="sc-AxiKw bmohav"
    id="password"
    name="password"
    placeholder="Password"
    type="password"
  />
  <span
    class="sc-AxhCb XwNWq"
  >
    This field is required.
  </span>
</div>
`;

exports[`FormGroup when is valid renders without crashing 1`] = `
<div
  class="sc-AxjAm gwJtGB"
>
  <label
    class="sc-AxirZ bgWkfA"
    for="password"
  >
    Password
  </label>
  <input
    class="sc-AxiKw bmohav"
    id="password"
    name="password"
    placeholder="Password"
    type="password"
  />
</div>
`;
